adequat error code for no customer linked to a user
